// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render BoundaryIndexExpression 1`] = `
<ExpressionWithPopover
  defaultValue="Select a data view and geo shape field"
  expressionDescription="index"
  popoverContent={
    <React.Fragment>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        id="geoIndexPatternSelect"
        labelType="label"
      >
        <GeoIndexPatternSelect
          IndexPatternSelectComponent={[MockFunction]}
          includedGeoTypes={
            Array [
              "geo_shape",
            ]
          }
          indexPatternService={
            Object {
              "clearCache": [MockFunction],
              "createField": [MockFunction],
              "createFieldList": [MockFunction],
              "ensureDefaultIndexPattern": [MockFunction],
              "find": [MockFunction],
              "get": [MockFunction],
              "make": [Function],
            }
          }
          onChange={[Function]}
        />
      </EuiFormRow>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        id="geoField"
        label="Geospatial field"
        labelType="label"
      >
        <SingleFieldSelect
          fields={Array []}
          onChange={[Function]}
          placeholder="Select geo field"
          value=""
        />
      </EuiFormRow>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        id="boundaryNameFieldSelect"
        label="Human-readable boundary name (optional)"
        labelType="label"
      >
        <SingleFieldSelect
          fields={Array []}
          onChange={[Function]}
          placeholder="Select boundary name"
          value="testNameField"
        />
      </EuiFormRow>
    </React.Fragment>
  }
/>
`;

exports[`should render EntityIndexExpression 1`] = `
<ExpressionWithPopover
  defaultValue="Select a data view and geo point field"
  expressionDescription="index"
  isInvalid={false}
  popoverContent={
    <React.Fragment>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        id="geoIndexPatternSelect"
        labelType="label"
      >
        <GeoIndexPatternSelect
          IndexPatternSelectComponent={[MockFunction]}
          includedGeoTypes={
            Array [
              "geo_point",
            ]
          }
          indexPatternService={
            Object {
              "clearCache": [MockFunction],
              "createField": [MockFunction],
              "createFieldList": [MockFunction],
              "ensureDefaultIndexPattern": [MockFunction],
              "find": [MockFunction],
              "get": [MockFunction],
              "make": [Function],
            }
          }
          onChange={[Function]}
        />
      </EuiFormRow>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        id="containmentTimeField"
        label={
          <FormattedMessage
            defaultMessage="Time field"
            id="xpack.stackAlerts.geoContainment.timeFieldLabel"
            values={Object {}}
          />
        }
        labelType="label"
      >
        <SingleFieldSelect
          fields={Array []}
          onChange={[Function]}
          placeholder="Select time field"
          value="testDateField"
        />
      </EuiFormRow>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        id="geoField"
        label="Geospatial field"
        labelType="label"
      >
        <SingleFieldSelect
          fields={Array []}
          onChange={[Function]}
          placeholder="Select geo field"
          value="testGeoField"
        />
      </EuiFormRow>
    </React.Fragment>
  }
/>
`;

exports[`should render EntityIndexExpression w/ invalid flag if invalid 1`] = `
<ExpressionWithPopover
  defaultValue="Select a data view and geo point field"
  expressionDescription="index"
  isInvalid={true}
  popoverContent={
    <React.Fragment>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        id="geoIndexPatternSelect"
        labelType="label"
      >
        <GeoIndexPatternSelect
          IndexPatternSelectComponent={[MockFunction]}
          includedGeoTypes={
            Array [
              "geo_point",
            ]
          }
          indexPatternService={
            Object {
              "clearCache": [MockFunction],
              "createField": [MockFunction],
              "createFieldList": [MockFunction],
              "ensureDefaultIndexPattern": [MockFunction],
              "find": [MockFunction],
              "get": [MockFunction],
              "make": [Function],
            }
          }
          onChange={[Function]}
        />
      </EuiFormRow>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        id="containmentTimeField"
        label={
          <FormattedMessage
            defaultMessage="Time field"
            id="xpack.stackAlerts.geoContainment.timeFieldLabel"
            values={Object {}}
          />
        }
        labelType="label"
      >
        <SingleFieldSelect
          fields={Array []}
          onChange={[Function]}
          placeholder="Select time field"
          value="testDateField"
        />
      </EuiFormRow>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        id="geoField"
        label="Geospatial field"
        labelType="label"
      >
        <SingleFieldSelect
          fields={Array []}
          onChange={[Function]}
          placeholder="Select geo field"
          value="testGeoField"
        />
      </EuiFormRow>
    </React.Fragment>
  }
/>
`;
